<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient">

    <TextView
        android:id="@+id/movie_title_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_background"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/movie_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/material_dynamic_neutral90"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"

        android:layout_height="50dp"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/saw_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#2E3133"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_shit"
            app:layout_constraintStart_toEndOf="@+id/rate_shit"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_saw" />

        <ImageButton
            android:id="@+id/rate_shit"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:backgroundTint="#2E3133"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saw_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_rate" />

        <ImageButton
            android:id="@+id/save_shit"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:backgroundTint="#2E3133"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saw_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_bookmark" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_d">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_gradient">


            <ImageView
                android:id="@+id/movie_photo"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/my_gradient_two"
                android:padding="12dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:layout_marginEnd="24dp"
                android:text="@string/plot"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/actors"
                app:layout_constraintTop_toBottomOf="@+id/actors" />

            <TextView
                android:id="@+id/counry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/release_date"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/plot"
                app:layout_constraintStart_toStartOf="@+id/plot"
                app:layout_constraintTop_toBottomOf="@+id/plot" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/runtime"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/counry"
                app:layout_constraintStart_toStartOf="@+id/counry"
                app:layout_constraintTop_toBottomOf="@+id/counry" />

            <TextView
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/language"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/time"
                app:layout_constraintStart_toStartOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ratings"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/movie_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_photo" />

            <TextView
                android:id="@+id/actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/actors_with_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/director"
                app:layout_constraintTop_toBottomOf="@+id/director" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ocenka" />

            <TextView
                android:id="@+id/director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/genre"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <TextView
                android:id="@+id/ocenka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/your_rating"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/rating"
                app:layout_constraintStart_toStartOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/rating" />

            <ImageButton
                android:id="@+id/movie_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#000000"
                android:text="share"
                app:layout_constraintBottom_toBottomOf="@+id/movie_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_share" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

