<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_four">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bot_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral30"
        android:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu"
        style="@style/BottomNavStyle"
        app:itemTextColor="@color/mainOrange"
        app:labelVisibilityMode="labeled" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        style="@style/CustomTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/material_dynamic_neutral30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_poster">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/main_featured"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/material_dynamic_neutral30"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/featured_today"
        android:textColor="@color/mainOrange"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bot_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tab_layout" />

    <ImageView
        android:id="@+id/main_poster"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_featured"
        tools:srcCompat="@drawable/noposter" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/movie_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_poster"
        app:layout_constraintTop_toBottomOf="@+id/main_featured" />

    <TextView
        android:id="@+id/main_plot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/plot"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_poster"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/main_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/release_date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/main_poster"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>